# site2pdf

./: .gitignore
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chromium_manager.rs  commands.rs  crawler.rs  lib.rs  main.rs  pdf.rs
